--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,8 +6,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext bokeh_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple plots in one figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot([1,4,9])\n",
-    "plot([1,8,27])"
+    "plot([1,8,27], '.-')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Legend"
    ]
   },
   {
@@ -22,6 +45,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,8 +63,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison to bokeh"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +84,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext bokeh_plot\n",
     "plot(y, '.-')"
    ]
   },
@@ -77,18 +113,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
