--- a/demo.ipynb
+++ b/demo.ipynb
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "x = np.linspace(4*np.pi, 100*np.pi, 3001)\n",
-    "plot(1/x, np.sin(x)/x, legend='sin(1/x)/x', legend_loc='top_left')\n",
-    "plot(1/x, -np.sin(x)/x, legend='-sin(1/x)/x')"
+    "plot(1/x, np.sin(x)/x, label='sin(1/x)/x', legend_loc='top_left')\n",
+    "plot(1/x, -np.sin(x)/x, label='-sin(1/x)/x')"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "source": [
     "p = figure(300, 300)                      # make it square\n",
     "board = np.tile(1-np.eye(2,2), (4,4))     # checkerboard pattern\n",
-    "imshow(board, p=p, palette='Greys256')    # override default palette"
+    "imshow(board, p=p, cmap='Greys')          # override default palette"
    ]
   },
   {
@@ -113,6 +113,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
